tests/sksl/errors/EmptyStruct.glsl
### Compilation failed:

error: 1: struct 'S' must contain at least one field
1 error
